# fmi-coding-theory

./: .gitignore  README.md
assignments/hw1/: main.tex
assignments/hw1/lcodes/: CMakeLists.txt  README.md  channel.cpp  channel.h  conanfile.txt  gsl_wrapper.cpp  gsl_wrapper.h  lcodes.cpp  lcodes.h  main.cpp
assignments/hw1/lcodes/generators/: generator_matrix_for_5-2_lcode.inc  generator_matrix_for_8-4_lcode.inc
assignments/hw2/: solution.tex
bch-codes/: README.md
bch-codes/src/: bibliography.bib  main.tex  template.tex
bch-codes/src/pictures/: README.md
gf-polynomials/: CMakeLists.txt  README.md  conanfile.txt
gf-polynomials/include/gf-polynomials/: gfp.h
gf-polynomials/tests/: test_operations.cpp
scripts/: help_had_tex.py
